
name: unixtime-convert-utility
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: Pavel KuÄera
maintainer: pave.kucera@gmail.com
build-type: Simple
cabal-version: >=1.10

executable convert-unixtime
    hs-source-dirs: src
    main-is: Main.hs
    -- ohter-modules
    -- other-extensions: 
    build-depends:
        base >=4.8,
        time >= 1.5,
        datetime >= 0.1
    default-language: Haskell2010
    ghc-options: -Wall
